feat: small fixes