@@ -6,7 +6,7 @@ import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 public class DeleteFunctionBuilder {
-	private static final String BASE_TEMPLATE = "DELETE DATA { %s } WHERE { %s }";
+	private static final String BASE_TEMPLATE = "DELETE %s { ?s ?p ?o } WHERE { %%s }";
 	private final String base;
 
 	private DeleteFunctionBuilder(String base) {
@@ -18,12 +18,12 @@ public class DeleteFunctionBuilder {
 	}
 
 	public static DeleteFunctionBuilder create() {
-		return new DeleteFunctionBuilder(BASE_TEMPLATE);
+		return new DeleteFunctionBuilder(String.format(BASE_TEMPLATE, ""));
 	}
 
 	public static DeleteFunctionBuilder withGraph(String graph) {
-		final String graphBase = "GRAPH <%s> { %%s }".formatted(graph);
-		return new DeleteFunctionBuilder(String.format(BASE_TEMPLATE, graphBase, graphBase));
+		final String graphBase = "FROM <%s>".formatted(graph);
+		return new DeleteFunctionBuilder(String.format(BASE_TEMPLATE, graphBase));
 	}
 
 	public DeleteFunction withDepth(int depth) {
@@ -39,7 +39,7 @@ public class DeleteFunctionBuilder {
 						        BIND (?o0 AS ?s)
 						    }
 						""", ""));
-		final String query = base.formatted("?s ?p ?o", whereConditions);
+		final String query = base.formatted(whereConditions);
 		return DeleteFunction.ofQuery(query);
 	}
 
@@ -47,7 +47,7 @@ public class DeleteFunctionBuilder {
 		return IntStream.range(0, length)
 				.mapToObj(i -> "?o%d ?p%d ?o%d . ".formatted(i, i + 1, i + 1))
 				.collect(Collectors.joining("",
-						"UNION { ",
+						" UNION { ",
 						"?o%d ?p ?o . BIND (?o%d AS ?s)}".formatted(length, length)));
 	}
 }
